hard-gists/cdf79835a0e30a9cbdeaaf2eb4151077/run.log
=== Docker Run Log for cdf79835a0e30a9cbdeaaf2eb4151077 ===
Started at: Mi 29. Okt 20:19:00 CET 2025

[2025-10-29 20:19:00] START: Running container for cdf79835a0e30a9cbdeaaf2eb4151077
[2025-10-29 20:19:01] SUCCESS: Container a0bdd8133bc20e65d99fbfec33db7d6addd7b263ddbb78c851e38dbc591df6b2 started for cdf79835a0e30a9cbdeaaf2eb4151077
=== Container logs for cdf79835a0e30a9cbdeaaf2eb4151077 ===
  File "/snippet.py", line 63
    print "example function"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cdf79835a0e30a9cbdeaaf2eb4151077 ===
[2025-10-29 20:19:03] INFO: Container a0bdd8133bc20e65d99fbfec33db7d6addd7b263ddbb78c851e38dbc591df6b2 has stopped
